# Sudoku_Anna.Anna

./: README.md  pyproject.toml  risultati_sudoku.txt
src/sudoku_anna_anna/: Sudoku.py  __init__.py  funzioneClickCasella.py  funzioneDivina.py  gioco.py  gioco_11.02.py  numeri.py
src/sudoku_socere/: Sudoku.py  __init__.py
