[project]
name = "sudoku_socere"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.9.4",
    "pygame>=2.6.1",
    "sudoku9>=0.1.0",
]

[project.scripts]
sudoku_socere = "sudoku_socere:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
